--- a/next/base_docker_image/requirements.txt
+++ b/next/base_docker_image/requirements.txt
@@ -1,41 +1,63 @@
-amqp==1.4.9
-aniso8601==1.2.1
-anyjson==0.3.3
-billiard==3.3.0.23
-boto==2.48.0
-celery==3.1.25
-certifi==2017.4.17
-chardet==3.0.4
-click==6.7
-cycler==0.10.0
-decorator==4.1.2
-Flask==1.0
-Flask-Login==0.4.0
-Flask-RESTful==0.3.6
-gevent==1.2.2
-greenlet==0.4.12
-gunicorn==19.7.1
-idna==2.5
-itsdangerous==0.24
-Jinja2==2.11.3
-joblib==0.11
-kombu==3.0.37
-line_profiler==2.1.2
-MarkupSafe==1.0
-matplotlib==1.5.3
-mpld3==0.3
-numpy==1.13.1
-pandas==0.20.3
-ply==3.10
-pymongo==3.4.0
-pyparsing==2.2.0
-python-dateutil==2.6.1
-pytz==2017.2
-PyYAML==5.4
-redis==2.10.5
-requests==2.21.0
-scipy==0.19.1
-six==1.10.0
-urllib3==1.24.2
-virtualenv==15.1.0
-Werkzeug==0.15.3
+amqp~=5.2.0
+aniso8601~=9.0.1
+billiard~=4.2.0
+blinker~=1.7.0
+boto3~=1.34.89
+botocore~=1.34.89
+celery~=5.4.0
+certifi~=2024.2.2
+chardet~=5.2.0
+charset-normalizer~=3.3.2
+click~=8.1.7
+click-didyoumean~=0.3.1
+click-plugins~=1.1.1
+click-repl~=0.3.0
+contourpy~=1.2.1
+cycler~=0.12.1
+decorator~=5.1.1
+distlib~=0.3.8
+dnspython~=2.6.1
+filelock~=3.13.4
+Flask~=3.0.3
+Flask-Login~=0.6.3
+Flask-RESTful~=0.3.10
+fonttools~=4.51.0
+gevent~=24.2.1
+greenlet~=3.0.3
+gunicorn~=22.0.0
+idna~=3.7
+itsdangerous~=2.2.0
+Jinja2~=3.1.3
+jmespath~=1.0.1
+joblib~=1.4.0
+kiwisolver~=1.4.5
+kombu~=5.3.7
+line-profiler~=4.1.2
+MarkupSafe~=2.1.5
+matplotlib~=3.8.4
+mpld3~=0.5.10
+numpy~=1.26.4
+packaging~=24.0
+pandas~=2.2.2
+pillow~=10.3.0
+platformdirs~=4.2.0
+ply~=3.11
+prompt-toolkit~=3.0.43
+pymongo~=4.7.2
+pyparsing~=3.1.2
+python-dateutil~=2.9.0.post0
+pytz~=2024.1
+PyYAML~=6.0.1
+redis~=5.0.3
+requests~=2.31.0
+s3transfer~=0.10.1
+scipy~=1.13.0
+six~=1.16.0
+tzdata~=2024.1
+urllib3~=2.2.1
+vine~=5.1.0
+virtualenv~=20.25.3
+wcwidth~=0.2.13
+Werkzeug~=3.0.2
+zope.event~=5.0
+zope.interface~=6.3
