--- a/local/requirements.txt
+++ b/local/requirements.txt
@@ -12,6 +12,7 @@ requests~=2.31.0
 selenium~=4.20.0
 sniffio~=1.3.1
 sortedcontainers~=2.4.0
+tqdm~=4.66.4
 trio~=0.25.0
 trio-websocket~=0.11.1
 typing_extensions~=4.11.0
