--- a/next/database/redis.conf
+++ b/next/database/redis.conf
@@ -71,7 +71,7 @@ tcp-backlog 511
 # unixsocketperm 700
 
 # Close the connection after a client is idle for N seconds (0 to disable)
-timeout 0
+timeout 120
 
 # TCP keepalive.
 #
@@ -87,7 +87,7 @@ timeout 0
 # On other kernels the period depends on the kernel configuration.
 #
 # A reasonable value for this option is 60 seconds.
-tcp-keepalive 0
+tcp-keepalive 60
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -421,6 +421,7 @@ slave-priority 100
 # an error 'max number of clients reached'.
 #
 # maxclients 10000
+maxclients 20000
 
 # Don't use more memory than the specified amount of bytes.
 # When the memory limit is reached Redis will try to remove keys
