add content cacheing to nginx

--- a/local/nginx.conf
+++ b/local/nginx.conf
@@ -6,6 +6,8 @@ upstream cadvisor {
     server cadvisor:8080;
 }
 
+proxy_cache_path /etc/nginx/cache/ levels=1:2 keys_zone=my_cache:10m max_size=10g
+                 inactive=60m use_temp_path=off;
 server {
   server_name next.localhost;
 
@@ -43,7 +45,10 @@ server {
     proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     proxy_set_header    X-Forwarded-Proto   $scheme;
   }
+
   location /media/ {
     alias /var/www/media/;
+    proxy_cache my_cache;
+    proxy_cache_valid any 30m;
   }
 }
