--- a/apps/ARankB/myApp.yaml
+++ b/apps/ARankB/myApp.yaml
@@ -11,7 +11,7 @@ initExp:
             values:
               alg_id:
                 description: Supported algorithm types for ARankB
-                values: [RandomSampling]
+                values: [RandomSampling, InfoTuple]
               test_alg_label:
                 description: alg_label of the algorithm whose collected triplets to use as a test set when validating this algorithm. A resulting plot of test-error on triplets is available on the dashboard.
                 type: str
@@ -30,6 +30,19 @@ initExp:
         failure_probability:
           description: Confidence value of result. 
           type: num
+        # For InfoTuple 
+        iteration:
+          description: Overall iterations for InfoTuple
+          type: num
+        burn_in_period:
+          description: Burn_in period for InfoTuple
+          type: num
+        down_sample_rate:
+          description: Downsample rate for InfoTuple
+          type: num
+        mu:
+          description: Regularization parameter for InfoTuple
+          type: num
 
 processAnswer:
   args:
@@ -42,5 +55,5 @@ processAnswer:
           values:
             type: num
             description: id
-          
+        
 
