--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,8 @@ nohup.out
 # vim
 *.swp
 
+apps/BinarySentimentWordClassificationRankN
+apps/BinarySentimentWordClassificationRankOne
+
 local/docker-compose.yml
 Miniconda3-latest-Linux-x86_64.sh
