--- a/local/local-venv/pyvenv.cfg
+++ b/local/local-venv/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = /usr/bin
+home = /home/ubuntu/miniconda3/bin
 include-system-site-packages = false
-version = 3.10.12
+version = 3.12.4
+executable = /home/ubuntu/miniconda3/bin/python3.12
+command = /home/ubuntu/miniconda3/bin/python3 -m venv /home/ubuntu/NEXT/local/local-venv
