--- a/apps/ARankB/algs/Algs.yaml
+++ b/apps/ARankB/algs/Algs.yaml
@@ -18,10 +18,10 @@ initExp:
     iteration:
       description: Overall iterations for InfoTuple
       type: num
-    burn_in_period:
+    burn_in:
       description: Burn_in period for InfoTuple
       type: num
-    down_sample_rate:
+    down_sample:
       description: Downsample rate for InfoTuple
       type: num
     mu:
@@ -48,6 +48,9 @@ processAnswer:
         values:
             type: num
             description: The ID of the target
+      participant_uid:
+        description: A list of IDs of the targets reranked from the query
+        type: string 
     rets:
       type: bool
       description: A boolean indicating success
