--- a/next/base_docker_image/requirements.txt
+++ b/next/base_docker_image/requirements.txt
@@ -51,7 +51,7 @@ PyYAML~=6.0.1
 redis~=5.0.3
 requests~=2.31.0
 s3transfer~=0.10.1
-scipy~=1.13.0
+scipy~=1.14.1
 six~=1.16.0
 tzdata~=2024.1
 urllib3~=2.2.1
@@ -61,3 +61,5 @@ wcwidth~=0.2.13
 Werkzeug~=3.0.2
 zope.event~=5.0
 zope.interface~=6.3
+cblearn==0.3.0
+scikit-learn==1.5.1
