--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ nohup.out
 
 apps/BinarySentimentWordClassificationRankN
 apps/BinarySentimentWordClassificationRankOne
+local/csv
 
 local/docker-compose.yml
 Miniconda3-latest-Linux-x86_64.sh
