--- a/local/text_example/info-init.yaml
+++ b/local/text_example/info-init.yaml
@@ -7,14 +7,16 @@ args:
     params:
     - {alg_label: InfoTuple, proportion: 1}
   d: 2
-  A: 2
-  B: 2
-  num_tries: 110
+  A: 10
+  B: 5
+  random_seed: 102
+  num_tries: 1000
   failure_probability: 0.0
-  iteration: 10
+  iteration: 9
   burn_in: 1
   down_sample: 1
   mu: 0.05
+  debug: true
   debrief: Test debrief
   instructions: Test instructions
   participant_to_algorithm_management: one_to_many
@@ -30,5 +32,4 @@ args:
     - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
     - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
     - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
-
    
