--- a/apps/PAQ_any/algs/Algs.yaml
+++ b/apps/PAQ_any/algs/Algs.yaml
@@ -4,6 +4,10 @@ initExp:
       description: Resource of the start colors in XYZ space
       type: any
       optional: true
+    directionalItems:
+      description: Resource of the direction colors in XYZ space
+      type: any
+      optional: true
     referenceItems:
       description: Resource of the reference colors in XYZ space
       type: any
