--- a/apps/DynamicPAQ/myApp.yaml
+++ b/apps/DynamicPAQ/myApp.yaml
@@ -2,7 +2,7 @@ extends: [base.yaml]
 initExp:
   args:
     app_id:
-      values: [PAQ]
+      values: [DynamicPAQ]
     args:
       values:
         alg_list:
@@ -10,36 +10,41 @@ initExp:
             values:
               alg_id:
                 description: Supported algorithm types for PAQ
-                values: [StaticSampling]
+                values: [ImageTransformation]
               test_alg_label:
                 description: alg_label of the algorithm whose collected triplets to use as a test set when validating this algorithm. A resulting plot of test-error on triplets is available on the dashboard.
                 type: str
         instructions:
           default: Sample Instructions
           optional: true
-        resourceA: 
-          description: Resource of the anchor
-          type: list
-          values:
-            type: num
-        resourceSample: 
-          description: Resource of the sample
-          type: list
-          values:
-            type: list
-            values:
-              type: num
-        resourceTicks: 
-          description: Resource of the ticks
-          type: list
-          values:
-            type: list
-            values:
-              type: num
+        # For ColoVisionPAQ ------------------------------------------------
+        directionalItems:
+          description: A list of directional items
+          type: any
+          optional: true
+        # -----------------------------------------------------------------
+        startItems:
+          description: A list of start items
+          type: any
+          optional: true
+        referenceItems: 
+          description: A list of reference colors
+          type: any
+          optional: true
+        endItems: 
+          description: A list of end colors
+          type: any
+          optional: true
         tickFlag:
           description: Flag to indicate if the ticks are to be shown
           type: bool
-        
+        tickNum:
+          description: Number of ticks
+          type: num
+        queryType:
+          description: Type of PAQ
+          type: str
+
 
 processAnswer:
   args:
@@ -47,7 +52,7 @@ processAnswer:
       type: dict
       values:
         answer:
-          description: The answer
+          description: a number representing the position of slider
           type: num
       # not relevant in static sampling; to be decided
         # target_winner:
