--- a/apps/PAQ/myApp.yaml
+++ b/apps/PAQ/myApp.yaml
@@ -10,37 +10,30 @@ initExp:
             values:
               alg_id:
                 description: Supported algorithm types for PAQ
-                values: [Color]
+                values: [ColorVision, ImageTransformation]
               test_alg_label:
                 description: alg_label of the algorithm whose collected triplets to use as a test set when validating this algorithm. A resulting plot of test-error on triplets is available on the dashboard.
                 type: str
         instructions:
           default: Sample Instructions
           optional: true
-        # For ColoVisionPAQ
+        # For ColoVisionPAQ ------------------------------------------------
+        directionalItems:
+          description: A list of directional items
+          type: any
+          optional: true
+        # -----------------------------------------------------------------
         startItems:
-          description: A list of start colors
-          type: list
-          values:
-            type: list
-            values:         
-              type: float
+          description: A list of start items
+          type: any
           optional: true
         referenceItems: 
           description: A list of reference colors
-          type: list
-          values:
-            type: list
-            values:
-              type: float
+          type: any
           optional: true
         endItems: 
           description: A list of end colors
-          type: list
-          values:
-            type: list
-            values:
-              type: float
+          type: any
           optional: true
         tickFlag:
           description: Flag to indicate if the ticks are to be shown
@@ -52,7 +45,6 @@ initExp:
           description: Type of PAQ
           type: str
 
-        # For VideoPAQ
 
 processAnswer:
   args:
