--- a/local/template/ARankB-test.yaml
+++ b/local/template/ARankB-test.yaml
@@ -12,14 +12,14 @@ args:
     # - {alg_label: RandomSampling, proportion: 0.5}
     # - {alg_label: InfoTuple, proportion: 0.5}
     - {alg_label: InfoTuple, proportion: 1}
-  d: 5 # embedding dimension
-  A: 5 # number of targets per query
-  B: 2 # number of targets to rank per query
+  d: 2 # embedding dimension
+  A: 99 # number of targets per query
+  B: 99 # number of targets to rank per query
   random_seed: 102 #
-  num_tries: 25 # Will be 25 be default if this field is missing. Make sure this value equals to (burn_in + iteration) * num_targets
+  num_tries: 1000 # Will be 25 be default if this field is missing. Make sure this value equals to (burn_in + iteration) * num_targets
   #----------------------------InfoTuple Exclusive------------------------#
   failure_probability: 0.01
-  iteration: 1 # each cycle of normal iteration involves every target being the head once
+  iteration: 9 # each cycle of normal iteration involves every target being the head once
   burn_in: 1 # each cycle of burn-in iteration involves every target being the head once
   down_sample: 1
   mu: 0.05
@@ -29,7 +29,7 @@ args:
   expel: false # whether to expel participants immediately if exceeds tolerance
   tolerance: 0.5 # tolerance for the trap question
   trapRatio: 0.1 # the portion of normal questions to answer before a trap shows up if set to 0.0 all trap questions will be evenly spaced out
-  num_trap_questions: 3 # number of trap questions available
+  num_trap_questions: 10 # number of trap questions available
   #-----------------------------------------------------------------------#
   debrief: SUCCESS # text to display at the end if participant successfully answered all questions
   debrief_fail: FAIL # text to display at the end if participant failed
@@ -43,6 +43,106 @@ args:
      # e.g. 'http://44.223.248.38"/media/video01.mp4' make sure to change the primary_type field accordingly
      # and use the correct Instance IP
     targetset:
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '0', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '1', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '2', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '3', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '4', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '5', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '6', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '7', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '8', alt_description: '', primary_type: 'text', alt_type: ''}
+    - {primary_description: '9', alt_description: '', primary_type: 'text', alt_type: ''}
     - {primary_description: 'Eating a meal', alt_description: '', primary_type: 'text', alt_type: ''}
     - {primary_description: 'Going on a walk', alt_description: '', primary_type: 'text', alt_type: ''}
     - {primary_description: 'Catching up with old friends', alt_description: '', primary_type: 'text', alt_type: ''}
@@ -68,8 +168,3 @@ args:
     # - {primary_description: 'Reading an engaging novel', alt_description: '', primary_type: 'text', alt_type: ''}
     # - {primary_description: 'Sprinting through the park', alt_description: '', primary_type: 'text', alt_type: ''}
     # - {primary_description: 'Organizing a closet neatly', alt_description: '', primary_type: 'text', alt_type: ''}
-
-     # Primary description is the answers, alt_description is the question. The first option is the correct answer.
-    - {primary_description: 'Positive, Negativity, War, Peace', alt_description: 'Choose the option with the word positive in it.', primary_type: 'text', alt_type: ''}
-    - {primary_description: 'Running, sleeping, cleaning, eating', alt_description: 'Pick the option with no e in it.', primary_type: 'text', alt_type: ''}
-    - {primary_description: 'yes, cleaning, running', alt_description: 'Are you paying attention?', primary_type: 'text', alt_type: ''}
